--- a/style/repairservices.css
+++ b/style/repairservices.css
@@ -54,14 +54,22 @@
   padding: 5px 2px;
   margin-top: 15px;
   margin-bottom: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
 }
 .messageUsForDiffService a {
-  color: orangered;
+  background-color: orangered;
+  color: #fff;
   padding: 5px 10px;
   border-radius: 3px;
-  transition: background-color 0.3s, box-shadow 0.3s;
-  text-decoration: underline;
+  box-shadow: 1px 1px 5px 3px rgba(0, 0, 0, 0.3294117647);
+  transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
 }
 .messageUsForDiffService a:hover {
-  color: rgb(249, 91, 33);
+  background-color: rgb(248, 102, 49);
+  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.3294117647);
+  transform: scale(1.1);
 }/*# sourceMappingURL=repairservices.css.map */
