--- a/style/repairservices.scss
+++ b/style/repairservices.scss
@@ -68,14 +68,20 @@ $primaryColor: #318ce7;
   padding: 5px 2px;
   margin-top: 15px;
   margin-bottom: 15px;
+  @include flexcontent();
+  flex-direction: column;
+  gap: 10px;
   a {
-    color: orangered;
+    background-color: orangered;
+    color: #fff;
     padding: 5px 10px;
     border-radius: 3px;
-    transition: background-color 0.3s, box-shadow 0.3s;
-    text-decoration: underline;
+    box-shadow: 1px 1px 5px 3px #00000054;
+    transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
     &:hover {
-      color: rgb(249, 91, 33);
+      background-color: rgb(248, 102, 49);
+      box-shadow: 1px 1px 3px 1px #00000054;
+      transform: scale(1.1);
     }
   }
 }
