--- a/style/style.scss
+++ b/style/style.scss
@@ -1017,33 +1017,57 @@ a {
   }
 }
 
-.bottomWhatsapp {
+.bottomWhatsapp,
+.bottomCallUs {
   position: fixed;
+  padding: 5px;
+  box-shadow: 0px 0px 5px 1px #0000007f;
+  border-radius: 50%;
+  cursor: pointer;
+  user-select: none;
+}
+
+.bottomWhatsapp {
   bottom: 15px;
   right: 10px;
   background-color: #25d366;
-  padding: 5px;
-  box-shadow: 0px 0px 5px 1px #0000007f;
-  border-radius: 5px;
-  cursor: pointer;
+  color: #fff;
   i {
     font-size: 1.9em;
   }
 }
 
+.bottomCallUs {
+  bottom: 63px;
+  right: 10px;
+  background-color: rgb(46, 217, 46);
+  color: #fff;
+  padding: 8px;
+  display: none;
+  i {
+    font-size: 1.3em;
+  }
+}
+
 .gotoTop {
-  bottom: 65px;
   position: fixed;
   bottom: 63px;
   right: 10px;
-  padding: 2px 5px;
   background-color: orangered;
   color: #fff;
-  border-radius: 5px;
+  padding: 5px 6px;
   box-shadow: 0px 0px 5px 1px #0000007f;
-  cursor: pointer;
-  display: none;
+  border-radius: 5px;
   i {
-    font-size: 1.9em;
+    font-size: 1.7em;
+  }
+}
+
+@media screen and (max-width: 907px) {
+  .bottomCallUs {
+    display: block;
+  }
+  .gotoTop {
+    bottom: 108px;
   }
 }
