--- a/style/contact.css
+++ b/style/contact.css
@@ -106,6 +106,11 @@
   border-radius: 5px;
   font-size: 1rem;
 }
+.contact-section form #phone[type=number]::-webkit-inner-spin-button,
+.contact-section form #phone[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 .contact-section form select {
   cursor: pointer;
 }
@@ -143,6 +148,14 @@
 .contact-section form .emailWhatsappBtn .whatsapBtn:hover {
   background-color: #009a38;
 }
+.contact-section form .alertbelowBtn {
+  color: red;
+  font-weight: bold;
+  font-family: sans-serif;
+  margin-top: 10px;
+  text-align: center;
+  display: none;
+}
 
 @media (max-width: 768px) {
   .contact-section {
@@ -162,5 +175,11 @@
   .contact-section .leave-message form .emailWhatsappBtn button,
   .contact-section .leave-message form .emailWhatsappBtn .whatsapBtn {
     width: 100%;
+  }
+}
+@media screen and (max-width: 517px) {
+  .contact-section .leave-message .emailWhatsappBtn button,
+  .contact-section .leave-message .emailWhatsappBtn .whatsapBtn {
+    font-size: 0.9em;
   }
 }/*# sourceMappingURL=contact.css.map */
