--- a/style/contact.css
+++ b/style/contact.css
@@ -140,7 +140,7 @@
   background-color: orangered;
 }
 .contact-section form .emailWhatsappBtn button:hover {
-  background-color: rgba(255, 68, 0, 0.774);
+  background-color: orangered;
 }
 .contact-section form .emailWhatsappBtn .whatsapBtn {
   background-color: #25d366;
