--- a/style/about.scss
+++ b/style/about.scss
@@ -1,3 +1,5 @@
+$primaryColor: orangered;
+
 @mixin flexcontent {
   display: flex;
   justify-content: center;
@@ -81,7 +83,7 @@
           flex-direction: column;
           gap: 15px;
           font-size: 1.5em;
-          color: orangered;
+          color: $primaryColor;
         }
 
         .flip-card-back {
@@ -184,7 +186,7 @@
     .line {
       padding: 0.01em 25px;
       border-radius: 15px;
-      background-color: orangered;
+      background-color: $primaryColor;
     }
     p {
       color: rgb(48, 48, 48);
@@ -199,7 +201,7 @@
         gap: 15px;
         align-items: normal;
         i {
-          color: orangered;
+          color: $primaryColor;
         }
       }
     }
