--- a/style/repairservices.scss
+++ b/style/repairservices.scss
@@ -1,10 +1,10 @@
+$primaryColor: orangered;
+
 @mixin flexcontent {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
-$primaryColor: #318ce7;
 
 .bgRepairServices {
   background: linear-gradient(45deg, #00000062, #00000054),
@@ -54,7 +54,7 @@ $primaryColor: #318ce7;
           background-color: rgb(227, 193, 180);
         }
         &.active {
-          background: orangered;
+          background: $primaryColor;
           color: white;
           box-shadow: 0 0 0.5rem rgb(0 0 0 / 0.2);
         }
@@ -72,7 +72,7 @@ $primaryColor: #318ce7;
   flex-direction: column;
   gap: 10px;
   a {
-    background-color: orangered;
+    background-color: $primaryColor;
     color: #fff;
     padding: 5px 10px;
     border-radius: 3px;
