--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,26 @@
   scroll-behavior: smooth;
 }
 
+.onHome {
+  background-color: orangered;
+  color: #fff;
+}
+
+.onContact {
+  background-color: orangered;
+  color: #fff;
+}
+
+.onAbout {
+  background-color: orangered;
+  color: #fff;
+}
+
+.onRepairService {
+  background-color: orangered;
+  color: #fff;
+}
+
 .strongHead {
   display: flex;
   justify-content: center;
@@ -70,7 +90,7 @@ a {
   z-index: 111;
 }
 .mainSectionNavabar .pureNavbar .LogoNameImg {
-  background: linear-gradient(45deg, orangered, rgba(255, 68, 0, 0.397));
+  background: orangered;
   padding: 5px 15px;
   border-radius: 5px;
   box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.2588235294);
@@ -123,6 +143,7 @@ a {
   color: #fff;
   box-shadow: 0px 0px 6px 2px rgba(0, 0, 0, 0.1529411765);
   padding: 12px 3px;
+  display: none;
 }
 .mainSectionNavabar .pureNavbar .ulBar li .call-us i {
   display: inline-block;
@@ -162,6 +183,7 @@ a {
     width: 100%;
     padding: 13px 10%;
     border-radius: 4px;
+    display: inline;
   }
   .mainSectionNavabar .pureNavbar .ulBar .call-us-li {
     margin-top: 25px;
@@ -650,6 +672,7 @@ a {
   gap: 5px;
   border: 1px solid orangered;
   position: relative;
+  cursor: pointer;
 }
 .servicesSection .subServicesSection .sevicesBox i {
   font-size: 2.5em;
@@ -689,7 +712,7 @@ a {
   cursor: pointer;
 }
 .servicesSection .subServicesSection .sevicesBox .gotoWsA:hover {
-  background-color: rgb(249, 91, 33);
+  background-color: orangered;
 }
 .servicesSection .allServices {
   margin-top: 85px;
@@ -710,16 +733,6 @@ a {
   color: #fff;
 }
 
-/* @media screen and (max-width: 1200px) {
-  .servicesSection {
-    .subMainServiceSection {
-      .subServicesSection {
-        .sevicesBox {
-        }
-      }
-    }
-  }
-} */
 /* repairStoreContent  - We are a Repair Store */
 .repairStoreContent {
   display: flex;
@@ -856,7 +869,7 @@ a {
   gap: 5px;
 }
 .reviewSection .reviewHere .starsDate .star {
-  color: #ed1b24;
+  color: orangered;
 }
 
 @media screen and (max-width: 777px) {
@@ -885,7 +898,7 @@ a {
 }
 /* footerSection */
 .footerSection {
-  background: linear-gradient(45deg, orangered, rgba(255, 68, 0, 0.612));
+  background: orangered;
   color: #fff;
   display: flex;
   justify-content: center;
