--- a/style/style.scss
+++ b/style/style.scss
@@ -1041,6 +1041,7 @@ a {
 .bottomWhatsapp {
   bottom: 15px;
   right: 10px;
+  padding: 5px 7px;
   background-color: #25d366;
   color: #fff;
   i {
