--- a/style/repairservices.scss
+++ b/style/repairservices.scss
@@ -1,4 +1,5 @@
 $primaryColor: orangered;
+$hoverPrimaryColor: rgb(255, 69, 1);
 
 @mixin flexcontent {
   display: flex;
@@ -79,7 +80,7 @@ $primaryColor: orangered;
     box-shadow: 1px 1px 5px 3px #00000054;
     transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
     &:hover {
-      background-color: rgb(248, 102, 49);
+      background-color: $hoverPrimaryColor;
       box-shadow: 1px 1px 3px 1px #00000054;
       transform: scale(1.1);
     }
